Updated autoinstaller & first-init & ufw and software

--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -1,3 +1,9 @@
+# Github
+general_repo: "https://github.com/realmaacke/General.git"
+
+# Devusername
+start_user: devuser
+
 # ssh access
 authorized_users_groups:
   - devuser
