--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,2 +1,5 @@
 [all]
-all-vm ansible_host=192.168.0.185 ansible_user=vboxuser ansible_ssh_private_key_file=~/.ssh/id_ed_vm
+all-vm ansible_host=192.168.0.90 ansible_user=devuser ansible_ssh_private_key_file=~/.ssh/id_ed_vm
+
+; [server]
+; server-machine ansible_host=petterssonhome.se ansible_user=dev ansible_ssh_private_key_file=~/.ssh/id_ed
