--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,4 +1,5 @@
 [defaults]
+vault_password_file         = ~/.vault_pass
 host_key_checking           = False
 ansible_python_interpreter  = /usr/bin/python3
 inventory                   = inventory
