--- a/ansible/server.yml
+++ b/ansible/server.yml
@@ -1,7 +1,5 @@
 ---
-- hosts: all
-
-- import_playbook: playbook.yml
+# - import_playbook: playbook.yml
 - import_playbook: hardening.yml
 - import_playbook: ufw.yml
 - import_playbook: software.yml
