--- a/ansible/roles/software/tasks/init_database.yml
+++ b/ansible/roles/software/tasks/init_database.yml
@@ -1,9 +1,4 @@
 ---
-- name: Create database structure (1/3)
-  ansible.builtin.command: mkdir -p /home/{{start_user}}/dev/general/database/init
-
-- name: Create database structure (2/3)
-  ansible.builtin.command: mkdir -p /home/{{start_user}}/dev/general/database/data
-
-- name: Create database structure (3/3)
-  ansible.builtin.command: mkdir -p /home/{{start_user}}/dev/general/database/logs
+- name: Init Database structure
+  ansible.builtin.command: "mkdir -p /home/{{ start_user }}/dev/general/{{ item }}"
+  loop: "{{ db_paths }}"
